Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/l2l-qas/l2l-qas-reports.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l2l-qas-reports
  namespace: l2l-qas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: l2l-qas-reports
  template:
    metadata:
      labels:
        app: l2l-qas-reports
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: l2l-qas-reports
        image: "registry.pixeon.cloud/lab2labreports-homologacao"
        ports:
        - containerPort: 80
          name: l2l-qas-reports
---
apiVersion: v1
kind: Service
metadata:
  name: l2l-qas-reports
  namespace: l2l-qas
spec:
  ports:
  - port: 80
  selector:
    app: l2l-qas-reports
